--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 interval = 600
 
 [VFS]
-url = https://visa.vfsglobal.com/tjk/en/ltp/login?_gl=1*1b4oekm*_ga*MTYyNjQ0MTExOC4xNzA3MjQyOTQ0*_ga_Z8LKRKHHG4*MTcwNzY4ODA1Ny40NC4xLjE3MDc2ODk5MDAuNjAuMC4w
+url = https://visa.vfsglobal.com/tjk/en/ltp/login?_gl=1*1ixpuji*_ga*MTYyNjQ0MTExOC4xNzA3MjQyOTQ0*_ga_Z8LKRKHHG4*MTcwNzcwNjYyNC40NS4xLjE3MDc3MDczNDkuNjAuMC4w
 email = redbringers@gmail.com
 password = 192837465qQ@
 
