--- a/config.ini
+++ b/config.ini
@@ -10,7 +10,7 @@ password = 192837465qQ@
 auth_token = 6711334040:AAGXT5tTX77Tybxdi-8bn_Y1GOR2r28ErQg
 
 [DATABASE]
-host = localhost
+host = 127.0.0.1
 port = 5432
 user = postgres
 password = postgres
