--- a/config.ini
+++ b/config.ini
@@ -12,8 +12,8 @@ auth_token = 6711334040:AAGXT5tTX77Tybxdi-8bn_Y1GOR2r28ErQg
 [DATABASE]
 host = 127.0.0.1
 port = 5432
-user = postgres
-password = postgres
+user = vfs
+password = 19287465qQ
 db = vfs_trpl
 
 [LOGGING]
